<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#456278"
    android:backgroundTint="#3F51B5"
    android:orientation="vertical"
    tools:context=".CiudadesActivity">

    <TextView
        android:id="@+id/tv_titulo_ciudades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/titulo_ciudades"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_quito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/btn_quito"
        android:textColor="#FF5722" />

    <Button
        android:id="@+id/btn_tulcan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/btn_tulcan"
        android:textColor="#FF5722" />

    <Button
        android:id="@+id/btn_get_volley"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="GET VOLLEY" />

    <Button
        android:id="@+id/btn_get_fuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:text="GET FUEL" />
</LinearLayout>

